--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>People counter Page</title>
 </head>
 <body>
-    <h1>People Entered</h1>
+    <h1>People Entered:</h1>
     <h2 id="count">0</h2>
+    <button id="increment-btn">INCREMENT</button>
+    <script src="main.js"></script>
 </body>
 </html>
