--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>People Entered:</h1>
     <h2 id="count">0</h2>
-    <button id="increment-btn">INCREMENT</button>
+    <button type="submit" id="increment-btn" onclick="increment()">INCREMENT</button>
     <script src="main.js"></script>
 </body>
 </html>
