--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>People Entered:</h1>
     <h2 id="count">0</h2>
     <button type="submit" id="increment-btn" onclick="increment()">INCREMENT</button>
+    <button type="button" id="save-btn" onclick="save()">SAVE</button>
     <script src="main.js"></script>
 </body>
 </html>
