--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h2 id="count">0</h2>
     <button type="submit" id="increment-btn" onclick="increment()">INCREMENT</button>
     <button type="button" id="save-btn" onclick="save()">SAVE</button>
+    <p id="previos-en">Previous entires: </p>
     <script src="main.js"></script>
 </body>
 </html>
