--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <title>People counter Page</title>
 </head>
 <body>
+    <div class="container">
     <h1>People Entered:</h1>
     <h2 id="count">0</h2>
     <button type="submit" id="increment-btn" onclick="increment()">INCREMENT</button>
     <button type="button" id="save-btn" onclick="save()">SAVE</button>
     <p id="previos-en">Previous entires: </p>
+</div>
     <script src="main.js"></script>
 </body>
 </html>
